# otari

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  TODOS.md  __init__.py  cli.py  cliff.toml  config.example.yml  config.yaml  dev.py  docker-compose.build.yml  docker-compose.override.yml  docker-compose.yml  main.py  openapitools.json  pyproject.toml  rate_limit.py  render.yaml  streaming.py  version.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: add-provider-guide.md  add-use-with-guide.md  bug_report.md  config.yml  feature_request.md
.github/instructions/: frontend-standards.instructions.md  performance-review.instructions.md  security-review.instructions.md
.github/workflows/: gateway-deploy-prod.yml  gateway-docker.yml  gateway-lint.yml  gateway-sdk-codegen.yml  gateway-tests.yml  gateway-typecheck.yml  otari-dashboard.yml  otari-docker.yml  otari-lint.yml  otari-pr-title.yml  otari-release.yml  otari-sdk-codegen-check.yml  otari-sdk-codegen.yml  otari-tag-release.yml  otari-tests.yml  otari-typecheck.yml  pr-template-check.yml  sdk-regen-staleness.yml
alembic/: env.py
alembic/versions/: 10a6a8ead0e7_soft_delete_user_and_cascade_api_key_fk.py  5911f4bbf98d_set_null_on_user_delete_for_log_.py  7d9e1f3a5b7c_add_metered_pricing_fields.py  967575f779b7_add_compound_index_usage_logs_user_id_timestamp.py  a2c4e6f8b0d1_add_runtime_settings.py  a3f1c5e7b9d0_add_api_key_prefix.py  a9c1e3b5d7f9_add_dashboard_sessions_table.py  b2f4c6d8e0a1_add_user_reserved_budget.py  b4d6f8a0c2e4_add_provider_credentials.py  b7c9d0e1f2a3_add_routing_policies_projects_traces.py  b7e2d4f6a8c0_add_api_key_allowed_models.py  b8c1d2e3f4a5_add_usage_source_and_budget_exclusion.py  c3d5e7f9a1b3_add_file_objects.py  c4d6e8f0a2b4_add_cache_pricing_columns.py  c8d9e0f1a2b3_add_endpoint_to_route_traces.py  c9f3a1b5d7e2_add_budget_name.py  d1e4b8c6f0a3_add_user_allowed_models.py  d4e6f8a0b2c4_add_router_tables.py  d4e6f8a0b2c4_add_usage_logs_cache_tokens.py  d5f7a9b1c3e5_add_pricing_snapshots.py  d9e0f1a2b3c4_add_project_tags_to_usage_logs.py  e0f1a2b3c4d5_add_project_budget_fields.py  e2f5a7c9b1d4_add_usage_logs_latency_ms.py  e5a7c9d1b3f4_index_budget_fks.py  f0a1b2c3d4e5_add_router_tables.py  f1a2b3c4d5e6_add_tag_scoped_budget_fields.py  f1a3b5c7d9e2_add_model_aliases.py  f2a3b4c5d6e7_add_guardrails_to_route_traces.py  f3a4b5c6d7e8_add_budget_alerts.py  f3b6d8a1c4e7_add_batches_table.py  f4a5b6c7d8e9_add_context_to_route_traces.py
api/: deps.py  main.py
api/routes/: _helpers.py  budgets.py  chat.py  embeddings.py  health.py  keys.py  messages.py  models.py  pricing.py  users.py
assets/: architecture.mmd
auth/: __init__.py
core/: database.py
db/: __init__.py
demo/board/: .env.example  .gitignore  RUNBOOK.md  app.sh  demo_flow.sh  docker-compose.platform.yml  docker-compose.standalone.yml  gateway-config.platform.yml  gateway-config.yml  start-platform.sh  start.sh  stop.sh
demo/code-exec/: .env.example  ask.sh  demo_flow.sh  gateway-config.yml  start.sh  stop.sh
demo/guardrails/: .env.example  README.md  ask.sh  demo_flow.sh  (+5 more)
docs/: CONTRIBUTING.md  access-control.md  api-reference.md  configuration.md  connected-mode-protocol.md  dashboard.md  deployment.md  external-usage.md  files.md  guardrails.md  hybrid-mode-protocol.md  index.md  mcp.md  merge-gateway-compatibility.md  models.md  modes.md  parity-messages-responses-plan.md  platform-protocol.md  quickstart.md  routing-scaling.md  routing.md  sdk-compatibility.md  supported-models.md  tools.md  use-with-claude-code.md  use-with-codex.md  use-with-opencode.md
models/: entities.py
repositories/: pricing_repository.py  users_repository.py
scripts/: apply_eval_scores.py  bench_chat_endpoint.py  check_stale_regen_prs.py  docker_liveness_check.sh  e2e_issue106.py  generate_openapi.py  generate_postman.py  seed_usage_smoke.py
services/: bootstrap_service.py  budget_service.py  pricing_init_service.py  pricing_service.py
src/: rate_limit.py
tests/: conftest.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
(+1361 files in other folders)
