[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribution + import package stay `gateway`: the `otari` name on PyPI is the
# Otari client SDK (a transitive dep via any-llm-sdk), so a top-level `otari`
# package here would collide with it. User-facing names (CLI, env vars, docs)
# are `otari`; only the internal import path remains `gateway`.
name = "gateway"
version = "0.0.0"
description = "otari, an OpenAI-compatible LLM gateway"
requires-python = ">=3.13"
dependencies = [
    "any-llm-sdk[all]>=1.17.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "click>=8.1.0",
    "fastapi>=0.115.0",
    "genai-prices>=0.0.66",
    "markitdown[docx,pptx,xlsx,pdf]>=0.1.0",
    "mcp>=1.0.0",
    "pillow>=10.0.0",
    "pypdfium2>=4.30.0",
    "prometheus-client>=0.20.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.31",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
# Optional OCR backend for image/scanned-PDF text extraction. Heavy (onnxruntime),
# so it's opt-in; the gateway degrades to vision-describe / drop when absent.
ocr = [
    "rapidocr-onnxruntime>=1.3.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.2.1,<8",
    "pytest-rerunfailures>=16.0",
    "pytest-timeout",
    "pytest-xdist>=3.6.1",
    "ruff>=0.15.9",
    "testcontainers[postgres]>=4.0.0",
]

[project.scripts]
otari = "gateway.cli:main"
# Legacy alias: the CLI was named `gateway` before the rename to `otari`.
gateway = "gateway.cli:main"

[tool.uv]
# Otari is deployed as a Linux server and developed on Linux / macOS; it is
# never packaged for Windows. Pinning the resolution environments keeps the
# universal lock from inheriting magika's win32-only `onnxruntime<=1.20.1`
# cap, which otherwise forces an onnxruntime build with no cp314 wheels and
# breaks the Python 3.14 Docker image. With win32 excluded, onnxruntime
# resolves to a release that ships cp314 wheels for linux and macOS.
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gateway*"]

[tool.setuptools.package-data]
gateway = ["templates/*.html", "templates/*.svg"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests", "scripts"]
# `demo/` is shell scripts; nothing for ruff to do there.
extend-exclude = ["demo/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/generate_openapi.py" = ["E402"]
"tests/integration/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests", "scripts"]
# Standalone web-search adapters are independent services (own Dockerfile +
# requirements), not part of the gateway package. They each ship a top-level
# `app.py`, so type-checking them together trips mypy's duplicate-module guard.
# Their behaviour is covered by tests/unit/test_*_adapter.py.
exclude = ["scripts/web-search-[^/]+-adapter/"]

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["trafilatura.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Optional/untyped extraction deps imported at the root (e.g. `import pypdfium2`,
# `from markitdown import ...`). Bare root names are required — a `foo.*` pattern
# alone does not match the top-level `foo` module these are imported as.
module = ["markitdown", "pypdfium2", "rapidocr_onnxruntime", "numpy", "PIL"]
ignore_missing_imports = true

